--- a/arc-workspace-dnd-mixin.html
+++ b/arc-workspace-dnd-mixin.html
@@ -41,6 +41,7 @@
         this._dragoverHandler = this._dragoverHandler.bind(this);
         this._dragleaveHandler = this._dragleaveHandler.bind(this);
         this._dropHandler = this._dropHandler.bind(this);
+        this._resetReorderState();
       }
 
       connectedCallback() {
@@ -103,7 +104,8 @@
           e.dataTransfer.setData('arc/history-request', request._id);
         }
         e.dataTransfer.setData('arc-source/requests-workspace', request._id);
-        e.dataTransfer.effectAllowed = 'copy';
+        e.dataTransfer.effectAllowed = 'copyMove';
+        this._startReorderDrag(e);
         const target = e.currentTarget;
         Polymer.RenderStatus.afterNextRender(this, () => {
           const style = getComputedStyle(this);
@@ -112,14 +114,52 @@
           this.$.tabs.style.setProperty('--paper-tabs-selection-bar-color', 'transparent');
           this.$.tabs.style.setProperty('--paper-tabs-selection-bar_-_border-color', 'transparent');
           this.__tabsInitialDisplay = target.style.display;
-          target.style.display = 'none';
+          target.style.visibility = 'hidden';
         });
       }
 
+      _startReorderDrag(e) {
+        const element = e.currentTarget;
+        const model = e.model;
+        this.__reorderInfo.type = 'track';
+        this.__reorderInfo.dragElement = element;
+        this.__reorderInfo.dragModel = model;
+        this.__reorderInfo.dragIndex = model.get('index');
+
+        // const ripple = element.shadowRoot.querySelector('paper-ripple');
+        // ripple.removeRipple(ripple.ripples[0]);
+      }
+
       _dragEnd(e) {
-        e.currentTarget.style.display = this.__tabsInitialDisplay;
+        if (this.__reorderInfo.type === 'track') {
+          this._finishReorder(e);
+        }
+      }
+
+      _finishReorder(e) {
+        const movedItem = this.__reorderInfo.dragModel.get('item');
+        const fromIdx = this.activeRequests.indexOf(movedItem);
+        let toIdx;
+        if (fromIdx >= 0 && this.__reorderInfo.overModel) {
+          toIdx = this.activeRequests.indexOf(this.__reorderInfo.overModel.get('item')) +
+            (this.__reorderInfo.overModel.index > this.__reorderInfo.dragModel.get('index') ? this._dirOffset : 0);
+          const item = this.splice('activeRequests', fromIdx, 1)[0];
+          this.splice('activeRequests', toIdx, 0, item);
+        }
+        const children = this.$.tabs.querySelectorAll('paper-tab');
+        for (let i = 0, len = children.length; i < len; i++) {
+          children[i].style.transform = '';
+          children[i].classList.remove('moving');
+        }
+        if (toIdx || toIdx === 0) {
+          this.selected = toIdx;
+        }
+
+        this._resetReorderState();
+        e.currentTarget.style.visibility = 'visible';
         this.$.tabs.style.setProperty('--paper-tabs-selection-bar-color', this.__tabsSelectionColor);
         this.$.tabs.style.setProperty('--paper-tabs-selection-bar_-_border-color', this.__tabsSelectionColor2);
+        this.refreshTabs();
       }
       /**
        * Computes value for the `draggable` property of the list item.
@@ -131,6 +171,10 @@
       _computeDraggableValue(draggableEnabled) {
         return draggableEnabled ? 'true' : 'false';
       }
+
+      _resetReorderState() {
+        this.__reorderInfo = {type: 'start', moves: []};
+      }
       /**
        * Handler for `dragover` event on this element. If the dagged item is compatible
        * it renders drop message.
@@ -140,24 +184,62 @@
         if (!this.draggableEnabled) {
           return;
         }
-        console.log('over', e);
         if (e.dataTransfer.types.indexOf('arc/request-object') === -1) {
           return;
         }
-        e.dataTransfer.dropEffect = 'copy';
         e.preventDefault();
         if (e.dataTransfer.types.indexOf('arc-source/requests-workspace') !== -1) {
+          e.dataTransfer.dropEffect = 'move';
           this._reorderDragover(e);
         } else {
+          e.dataTransfer.dropEffect = 'copy';
           this._newTabDragover(e);
         }
       }
 
       _reorderDragover(e) {
+        if (this.__reorderInfo.type !== 'track') {
+          return;
+        }
+        this.__reorderInfo.moves.push({x: e.clientX, y: e.clientY});
+        this.__reorderInfo.x = e.clientX;
+        this.__reorderInfo.y = e.clientY;
         const dragElement = this._getReorderedItem(e);
-        this._dragElement = dragElement;
-        this._dragModel = e.model;
-        this._blockEditors();
+        if (!dragElement) {
+          return;
+        }
+        let secondlast = this.__reorderInfo.moves[this.__reorderInfo.moves.length - 2];
+        let lastmove = this.__reorderInfo.moves[this.__reorderInfo.moves.length - 1];
+        // let dx = lastmove.x - this.__reorderInfo.x;
+        let ddx = 0;
+        if (secondlast) {
+          ddx = lastmove.x - secondlast.x;
+        }
+        const model = this.$.tabsRepeater.modelForElement(dragElement);
+        this._updateTabPosition(ddx);
+        this._dirOffset = ddx < 0 ? -1 : 0;
+        this.__reorderInfo.overModel = model;
+        const lastOverIndex = this._overIndex || 0;
+        const overIndex = model.index + this._dirOffset;
+        const start = Math.max(overIndex < lastOverIndex ? overIndex : lastOverIndex, 0);
+        const end = model.index < lastOverIndex ? lastOverIndex : model.index;
+        const draggedIndex = this.__reorderInfo.dragIndex;
+        const children = this.$.tabs.querySelectorAll('paper-tab');
+        for (let i = start; i <= end; i++) {
+          const el = children[i];
+          if (i !== draggedIndex) {
+            let dir = 0;
+            if (i > draggedIndex && i <= overIndex) {
+              dir = -1;
+            } else if (i > overIndex && i < draggedIndex) {
+              dir = 1;
+            }
+            el.classList.add('moving');
+            const offset = dir * this.__reorderInfo.dragElement.offsetWidth;
+            el.style.transform = `translate3d(${offset}px, 0px, 0px)`;
+          }
+        }
+        this._overIndex = model.index;
       }
 
       _newTabDragover() {
@@ -373,7 +455,9 @@
        */
       _updateTabPosition(ddx) {
         const tabsRect = this.$.tabs.$.tabsContainer.getBoundingClientRect();
-        const tabRect = this._dragElement.getBoundingClientRect();
+        const tabRect = this.__reorderInfo.dragElement.getBoundingClientRect();
+        const ripple = this.__reorderInfo.dragElement.shadowRoot.querySelector('paper-ripple');
+        ripple.removeRipple(ripple.ripples[0]);
         if (ddx > 0) {
           const mostRigth = tabsRect.x + tabsRect.width;
           const tabMostRight = tabRect.x + tabRect.width;
