--- a/arc-workspace-dnd-mixin.html
+++ b/arc-workspace-dnd-mixin.html
@@ -125,41 +125,52 @@
         this.__reorderInfo.dragElement = element;
         this.__reorderInfo.dragModel = model;
         this.__reorderInfo.dragIndex = model.get('index');
-
-        // const ripple = element.shadowRoot.querySelector('paper-ripple');
-        // ripple.removeRipple(ripple.ripples[0]);
+        this._blockEditors();
       }
 
       _dragEnd(e) {
         if (this.__reorderInfo.type === 'track') {
           this._finishReorder(e);
+          this.refreshTabs();
+          this._unblockEditors();
         }
       }
 
       _finishReorder(e) {
-        const movedItem = this.__reorderInfo.dragModel.get('item');
-        const fromIdx = this.activeRequests.indexOf(movedItem);
+        const ripple = this.__reorderInfo.dragElement.shadowRoot.querySelector('paper-ripple');
+        ripple.removeRipple(ripple.ripples[0]);
+        const toIdx = this._rearrangeReorder();
+        this._resetReorderChildren();
+        if (toIdx || toIdx === 0) {
+          this.selected = toIdx;
+        }
+        this._resetReorderState();
+        this._resetReorderStyles(e);
+      }
+
+      _rearrangeReorder() {
+        const fromIdx = this.__reorderInfo.dragIndex;
         let toIdx;
         if (fromIdx >= 0 && this.__reorderInfo.overModel) {
-          toIdx = this.activeRequests.indexOf(this.__reorderInfo.overModel.get('item')) +
-            (this.__reorderInfo.overModel.index > this.__reorderInfo.dragModel.get('index') ? this._dirOffset : 0);
+          toIdx = this.__reorderInfo.overIndex;
           const item = this.splice('activeRequests', fromIdx, 1)[0];
           this.splice('activeRequests', toIdx, 0, item);
         }
+        return toIdx;
+      }
+
+      _resetReorderStyles(e) {
+        e.currentTarget.style.visibility = 'visible';
+        this.$.tabs.style.setProperty('--paper-tabs-selection-bar-color', this.__tabsSelectionColor);
+        this.$.tabs.style.setProperty('--paper-tabs-selection-bar_-_border-color', this.__tabsSelectionColor2);
+      }
+
+      _resetReorderChildren() {
         const children = this.$.tabs.querySelectorAll('paper-tab');
         for (let i = 0, len = children.length; i < len; i++) {
           children[i].style.transform = '';
           children[i].classList.remove('moving');
         }
-        if (toIdx || toIdx === 0) {
-          this.selected = toIdx;
-        }
-
-        this._resetReorderState();
-        e.currentTarget.style.visibility = 'visible';
-        this.$.tabs.style.setProperty('--paper-tabs-selection-bar-color', this.__tabsSelectionColor);
-        this.$.tabs.style.setProperty('--paper-tabs-selection-bar_-_border-color', this.__tabsSelectionColor2);
-        this.refreshTabs();
       }
       /**
        * Computes value for the `draggable` property of the list item.
@@ -184,7 +195,8 @@
         if (!this.draggableEnabled) {
           return;
         }
-        if (e.dataTransfer.types.indexOf('arc/request-object') === -1) {
+        if (e.dataTransfer.types.indexOf('arc/request-object') === -1 &&
+          e.dataTransfer.types.indexOf('arc/project-object') === -1) {
           return;
         }
         e.preventDefault();
@@ -201,29 +213,42 @@
         if (this.__reorderInfo.type !== 'track') {
           return;
         }
-        this.__reorderInfo.moves.push({x: e.clientX, y: e.clientY});
-        this.__reorderInfo.x = e.clientX;
-        this.__reorderInfo.y = e.clientY;
+        this._updateReorderMoves(e);
+        const ddx = this._getReorderDdx();
+        this._updateTabPosition(ddx, e.clientX);
         const dragElement = this._getReorderedItem(e);
         if (!dragElement) {
           return;
         }
+        const model = this.$.tabsRepeater.modelForElement(dragElement);
+        this.__reorderInfo.dirOffset = ddx < 0 ? -1 : 0;
+        this.__reorderInfo.overModel = model;
+        const lastOverIndex = this.__reorderInfo.overIndex || 0;
+        const overIndex = model.index + this.__reorderInfo.dirOffset;
+        const start = Math.max(overIndex < lastOverIndex ? overIndex : lastOverIndex, 0);
+        const end = model.index < lastOverIndex ? lastOverIndex : model.index;
+        const draggedIndex = this.__reorderInfo.dragIndex;
+        this._updateChildrenReorder(start, end, draggedIndex, overIndex);
+        this.__reorderInfo.overIndex = model.index;
+      }
+
+      _getReorderDdx() {
         let secondlast = this.__reorderInfo.moves[this.__reorderInfo.moves.length - 2];
         let lastmove = this.__reorderInfo.moves[this.__reorderInfo.moves.length - 1];
-        // let dx = lastmove.x - this.__reorderInfo.x;
         let ddx = 0;
         if (secondlast) {
           ddx = lastmove.x - secondlast.x;
         }
-        const model = this.$.tabsRepeater.modelForElement(dragElement);
-        this._updateTabPosition(ddx);
-        this._dirOffset = ddx < 0 ? -1 : 0;
-        this.__reorderInfo.overModel = model;
-        const lastOverIndex = this._overIndex || 0;
-        const overIndex = model.index + this._dirOffset;
-        const start = Math.max(overIndex < lastOverIndex ? overIndex : lastOverIndex, 0);
-        const end = model.index < lastOverIndex ? lastOverIndex : model.index;
-        const draggedIndex = this.__reorderInfo.dragIndex;
+        return ddx;
+      }
+
+      _updateReorderMoves(e) {
+        this.__reorderInfo.moves.push({x: e.clientX, y: e.clientY});
+        this.__reorderInfo.x = e.clientX;
+        this.__reorderInfo.y = e.clientY;
+      }
+
+      _updateChildrenReorder(start, end, draggedIndex, overIndex) {
         const children = this.$.tabs.querySelectorAll('paper-tab');
         for (let i = start; i <= end; i++) {
           const el = children[i];
@@ -239,11 +264,6 @@
             el.style.transform = `translate3d(${offset}px, 0px, 0px)`;
           }
         }
-        this._overIndex = model.index;
-      }
-
-      _newTabDragover() {
-
       }
       /**
        * Handler for `dragleave` event on this element. If the dagged item is compatible
@@ -254,14 +274,13 @@
         if (!this.draggableEnabled) {
           return;
         }
-        console.log('leave', e);
-        if (e.dataTransfer.types.indexOf('arc/request-object') === -1) {
+        if (e.dataTransfer.types.indexOf('arc/request-object') === -1 &&
+          e.dataTransfer.types.indexOf('arc/project-object') === -1) {
           return;
         }
         e.preventDefault();
-        if (this.classList.contains('drop-target')) {
-          this.classList.remove('drop-target');
-        }
+        this._removeDropPointer();
+        this.__dropPointerReference = undefined;
       }
       /**
        * Handler for `drag` event on this element. If the dagged item is compatible
@@ -272,124 +291,62 @@
         if (!this.draggableEnabled) {
           return;
         }
-        if (e.dataTransfer.types.indexOf('arc/request-object') === -1 ||
-          e.dataTransfer.types.indexOf('arc/saved-request') !== -1) {
+        if (this.__reorderInfo.type === 'track') {
+          // This is reorder drop
+          return;
+        }
+        const isRequest = e.dataTransfer.types.indexOf('arc/request-object') !== -1;
+        const isProject = e.dataTransfer.types.indexOf('arc/project-object') !== -1;
+        if (!isRequest && !isProject) {
           return;
         }
         e.preventDefault();
-        if (this.classList.contains('drop-target')) {
-          this.classList.remove('drop-target');
+        this._removeDropPointer();
+        const order = this._computeDropOrder();
+        this.__dropPointerReference = undefined;
+        if (isRequest) {
+          this._dropRequest(e, order);
+        } else {
+          this._dropProject(e, order);
         }
+      }
+
+      _dropRequest(e, order) {
         const data = e.dataTransfer.getData('arc/request-object');
-        if (!data) {
-          return;
-        }
         const request = JSON.parse(data);
-        this._appendRequest(request);
-      }
-      /**
-       * Handles track event dispatched by `Polymer.Gestures` library.
-       * This method calls corresponding method to current dragging state.
-       * @param {CustomEvent} e
-       */
-      _handleTrack(e) {
-        if (!this._dragPossible) {
-          return;
-        }
-        switch (e.detail.state) {
-          case 'start':
-            this._onTrackStart(e);
-            break;
-          case 'track':
-            this._onTrack(e);
-            break;
-          case 'end':
-            this._onTrackEnd(e);
-            break;
+        if (e.ctrlKey || e.metaKey) {
+          this.clearWorkspace(true);
+          this.appendRequest(request);
+        } else {
+          this.appendRequestAt(order, request);
         }
       }
-      /**
-       * Initializes the tracking of an element.
-       * @param {CustomEvent} e Original event from the Gestures library.
-       */
-      _onTrackStart(e) {
-        // this._startScrollLeft = this.scrollLeft;
-        this._startScrollLeft = this.$.tabs.$.tabsContainer.scrollLeft;
-        const dragElement = this._getReorderedItem(e);
-        dragElement.style.pointerEvents = 'none';
-        dragElement.classList.add('dragging');
-        this._dragElement = dragElement;
-        this._dragModel = e.model;
-        this._blockEditors();
-      }
-      /**
-       * Called when the element is being tacked (moved).
-       * @param {CustomEvent} e Original event from the Gestures library.
-       */
-      _onTrack(e) {
-        this._updateTabPosition(e.detail.ddx);
-        this._updateDragPosition(e.detail.dx);
-        const overEl = e.detail.hover();
-        const overModel = overEl && this.$.tabsRepeater.modelForElement(overEl);
-        if (!overModel) {
-          return;
+
+      _dropProject(e, order) {
+        const data = e.dataTransfer.getData('arc/project-object');
+        const project = JSON.parse(data);
+        if (e.ctrlKey || e.metaKey) {
+          this.clearWorkspace(true);
+          this.appendByProject(project);
+        } else {
+          this.appendByProject(project, order);
         }
-        this._dirOffset = e.detail.ddx < 0 ? -1 : 0;
-        this._overModel = overModel;
-        const lastOverIndex = this._overIndex || 0;
-        const overIndex = overModel.index + this._dirOffset;
-        const start = Math.max(overIndex < lastOverIndex ? overIndex : lastOverIndex, 0);
-        const end = overModel.index < lastOverIndex ? lastOverIndex : overModel.index;
-        const draggedIndex = this._dragModel.get('index');
-        const children = this.$.tabs.querySelectorAll('paper-tab');
-        for (let i = start; i <= end; i++) {
-          const el = children[i];
-          if (i !== draggedIndex) {
-            let dir = 0;
-            if (i > draggedIndex && i <= overIndex) {
-              dir = -1;
-            } else if (i > overIndex && i < draggedIndex) {
-              dir = 1;
-            }
-            el.classList.add('moving');
-            el.style.transform =
-              `translate3d(${dir * this._dragElement.offsetWidth}px, 0px, 0px)`;
+      }
+
+      _computeDropOrder() {
+        const dropRef = this.__dropPointerReference;
+        let order;
+        if (dropRef) {
+          if (dropRef.nodeName === 'DOM-REPEAT') {
+            order = this.activeRequests.length;
+          } else {
+            const model = this.$.tabsRepeater.modelForElement(dropRef);
+            order = model.get('index');
           }
+        } else {
+          order = this.activeRequests.length;
         }
-        this._overIndex = overModel.index;
-      }
-      /**
-       * Performs operation when the tab drop occurs.
-       */
-      _onTrackEnd() {
-        if (!this._dragElement) {
-          return;
-        }
-        this._dragElement.style.pointerEvents = '';
-        // this._dragElement.style.transform = '';
-        this._dragElement.classList.remove('dragging');
-        this._dragElement = undefined;
-        const movedItem = this._dragModel.get('item');
-        const fromIdx = this.activeRequests.indexOf(movedItem);
-        let toIdx;
-        if (fromIdx >= 0 && this._overModel) {
-          toIdx = this.activeRequests.indexOf(this._overModel.item) +
-            (this._overModel.index > this._dragModel.get('index') ? this._dirOffset : 0);
-          const item = this.splice('activeRequests', fromIdx, 1)[0];
-          this.splice('activeRequests', toIdx, 0, item);
-        }
-        const children = this.$.tabs.querySelectorAll('paper-tab');
-        for (let i = 0, len = children.length; i < len; i++) {
-          children[i].style.transform = '';
-          children[i].classList.remove('moving');
-        }
-        if (toIdx || toIdx === 0) {
-          this.selected = toIdx;
-        }
-        this._dragModel = undefined;
-        this._overModel = undefined;
-        this._unblockEditors();
-        this.refreshTabs();
+        return order;
       }
       /**
        * Sets `readonly` state on all editors
@@ -438,37 +395,72 @@
         }
       }
       /**
-       * Re-positions dragged element to the place where it belongs.
-       * It accounts for scroll position if it changed since dragging started.
-       * @param {Number} dx Delta X from starting position.
-       */
-      _updateDragPosition(dx) {
-        this._trackDelta = dx || this._trackDelta || 0;
-        // const scrollDelta = this.scrollLeft - this._startScrollLeft;
-        const scrollDelta = this.$.tabs.$.tabsContainer.scrollLeft - this._startScrollLeft;
-        const pos = this._trackDelta + scrollDelta;
-        this._dragElement.style.transform = `translate3d(${pos}px,0,0)`;
-      }
-      /**
        * Scrolls tabs right or left depending on dragged element position.
        * @param {Number} ddx delta from last tracked position
+       * @param {Number} x Current pointer's x position
        */
-      _updateTabPosition(ddx) {
+      _updateTabPosition(ddx, x) {
         const tabsRect = this.$.tabs.$.tabsContainer.getBoundingClientRect();
-        const tabRect = this.__reorderInfo.dragElement.getBoundingClientRect();
-        const ripple = this.__reorderInfo.dragElement.shadowRoot.querySelector('paper-ripple');
-        ripple.removeRipple(ripple.ripples[0]);
         if (ddx > 0) {
           const mostRigth = tabsRect.x + tabsRect.width;
-          const tabMostRight = tabRect.x + tabRect.width;
-          if (tabMostRight > mostRigth) {
+          if (x > mostRigth) {
             this.$.tabs._affectScroll(ddx * 5);
           }
         } else if (ddx < 0) {
-          if (tabRect.x < tabsRect.x) {
+          if (x < tabsRect.x) {
             this.$.tabs._affectScroll(ddx * 5);
           }
         }
+      }
+      _newTabDragover(e) {
+        const path = e.path || e.composedPath();
+        const item = path.find((node) => node.nodeName === 'PAPER-TAB');
+        if (!item) {
+          return;
+        }
+        const rect = item.getClientRects()[0];
+        const aboveHalf = (rect.x + rect.width/2) > e.x;
+        const ref = aboveHalf ? item : item.nextElementSibling;
+        if (!ref || this.__dropPointerReference === ref) {
+          return;
+        }
+        this._removeDropPointer();
+        this.__dropPointerReference = ref;
+        this._createDropPointer(ref);
+      }
+      /**
+       * Removes drop pointer from shadow root.
+       */
+      _removeDropPointer() {
+        if (!this.__dropPointer) {
+          return;
+        }
+        this.shadowRoot.removeChild(this.__dropPointer);
+        this.__dropPointer = undefined;
+      }
+      /**
+       * Removes drop pointer to shadow root.
+       * @param {Element} ref A list item to be used as a reference point.
+       */
+      _createDropPointer(ref) {
+        let toLetf = false;
+        if (ref.nodeName === 'DOM-REPEAT') {
+          // was last element
+          toLetf = true;
+          ref = ref.previousElementSibling;
+        }
+        const rect = ref.getClientRects()[0];
+        const div = document.createElement('div');
+        div.className = 'drop-pointer';
+        const ownRect = this.getClientRects()[0];
+        let leftPosition = rect.x - ownRect.x;
+        if (toLetf) {
+          leftPosition += rect.width;
+        }
+        leftPosition -= 10; // some padding
+        div.style.left = leftPosition + 'px';
+        this.__dropPointer = div;
+        this.shadowRoot.appendChild(div);
       }
     }
     return ArcWorkspaceDndMixin;
